test/compile-fail/scope/use-self-no-name/expected.txt
error: unresolved import `b`
 --> top.rhdl:3:10
  |
3 | use self::a::b;
  |           ^^^^ no `b` in `a`
